--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,22 @@
 <div class="container">
     <section class="hero">
-      <h1>Welcome to My Portfolio</h1>
-      <p>I'm a passionate developer showcasing my skills and projects</p>
+		<div class="terminal-div">
+			<div class="terminal">
+				<div class="terminal-header">
+					<div class="terminal-buttons">
+						<div class="terminal-button red"></div>
+						<div class="terminal-button yellow"></div>
+						<div class="terminal-button green"></div>
+					</div>
+				</div>
+				<div class="terminal-content">
+					<p class="terminal-text green">$ npm install missclick.net</p>
+					<p class="terminal-text white">I'm a developer passionate about creating amazing web applications.</p>
+					<p>Explore my work and let's connect!</p>
+				</div>
+			</div>
+		</div>
+
       <button class="cta-button">View My Work</button>
     </section>
   
