--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,11 +8,15 @@
 						<div class="terminal-button yellow"></div>
 						<div class="terminal-button green"></div>
 					</div>
+					<p> bash</p>
 				</div>
 				<div class="terminal-content">
-					<p class="terminal-text green">$ npm install missclick.net</p>
-					<p class="terminal-text white">I'm a developer passionate about creating amazing web applications.</p>
-					<p>Explore my work and let's connect!</p>
+					<p class="terminal-text green">$ npm install missclick</p>
+					<p class="terminal-text white">+ missclick&#64;07.11.04
+
+						added 1 package, and audited 2 packages in 3s</p>
+					<br>
+					<p class="terminal-text white">Explore my work and let's connect!</p>
 				</div>
 			</div>
 		</div>
