--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,7 +16,12 @@
 
 						added 1 package, and audited 2 packages in 3s</p>
 					<br>
-					<p class="terminal-text white">Explore my work and let's connect!</p>
+					<p class="terminal-text grey">Explore my work and let's connect!</p>
+					<div class="terminal-input-container">
+						<span class="terminal-prompt">></span>
+						<input type="text" class="terminal-input" (focus)="inputFocused = true" (blur)="inputFocused = false" [(ngModel)]="terminalInput">
+						<span class="terminal-cursor" [class.active]="inputFocused || !terminalInput"></span>
+					</div>
 				</div>
 			</div>
 		</div>
