refractor: gave some structure to components

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,7 +43,11 @@
         </div>
       </div>
     </section>
-  
+
+    <section class="hobbies">
+      <app-hobbies></app-hobbies>
+    </section>
+
     <section class="skills">
       <h2>My Skills</h2>
       <div class="skills-grid">
@@ -76,8 +80,13 @@
         </div>
       </div>
     </section>
-  </div>
 
-  <div>
-<app-github-stats></app-github-stats>
+    <section class="github-stats">
+      <app-github-stats></app-github-stats>
+    </section>
+
+    <section class="projects">
+      <app-projects></app-projects>
+    </section>
+
 </div>
