--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <section class="hero">
+    <section class="terminal">
         <app-terminal></app-terminal>
         <button class="cta-button">View My Work</button>
     </section>
