refactor: update GitHub stats image sources and modify star label for clarity

--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -60,7 +60,7 @@
       <!-- Profile Stats -->
       <div *ngIf="activeModal === 'profile'" class="stat-card">
         <img 
-          src="https://github-readme-stats.vercel.app/api?username=Gabrieleirbag1&show_icons=true&theme=radical" 
+          src="https://github-readme-stats.vercel.app/api?username=Gabrieleirbag1&show_icons=true&theme=buefy&rank_icon=github" 
           alt="GitHub Stats" 
           class="github-card"
         />
@@ -69,7 +69,7 @@
       <!-- Contribution Stats -->
       <div *ngIf="activeModal === 'contributions'" class="stat-card">
         <img 
-          src="https://github-readme-streak-stats.herokuapp.com/?user=Gabrieleirbag1&theme=dark" 
+          src="https://github-readme-streak-stats.herokuapp.com/?user=Gabrieleirbag1&theme=buefy&hide_border=true&stroke=0000&background=FFFFFF00&ring=FF0000&fire=FF0000&currStreakLabel=FF0000" 
           alt="GitHub Streak Stats" 
           class="github-card"
         />
