--- a/src/app/components/github-stats/github-stats.component.css
+++ b/src/app/components/github-stats/github-stats.component.css
@@ -237,7 +237,7 @@
   border-radius: 8px;
   padding: 15px;
   text-align: center;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   min-width: 120px;
   margin: 10px;
 }
