--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -13,7 +13,7 @@
       <img src="assets/icons/winxp-start.png" alt="Start" class="start-logo">
     </div>
     <div class="taskbar-time">
-      {{ currentTime | date:'h:mm a' }}
+      <span>{{ currentTime | date:'h:mm a' }}</span>
     </div>
   </div>
 
