--- a/src/app/components/github-stats/github-stats.component.css
+++ b/src/app/components/github-stats/github-stats.component.css
@@ -16,7 +16,7 @@
 .desktop-icons {
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 80px);
+  /* grid-template-columns: repeat(auto-fill, 80px); */
   grid-gap: 20px;
   align-content: start;
 }
