--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -66,6 +66,34 @@
           <p class="icon-text icon-text-desc">stars earned</p>
         </div>
       </div>
+
+      <!-- Total Commits -->
+      <div *ngIf="activeModal.type === 'commits'" class="stat-card stat-icon-card">
+        <img [src]="activeModal.iconSrc" alt="Commits Icon" class="icon-card">
+        <div>        
+          <p class="icon-text icon-text-value">{{ githubStats.commits }}</p>
+          <p class="icon-text icon-text-desc">total commits</p>
+        </div>
+      </div>
+
+      <!-- Total Repositories -->
+      <div *ngIf="activeModal.type === 'repositories'" class="stat-card stat-icon-card">
+        <img [src]="activeModal.iconSrc" alt="Repositories Icon" class="icon-card">
+        <div>        
+          <p class="icon-text icon-text-value">{{ githubStats.repositories }}</p>
+          <p class="icon-text icon-text-desc">total repositories</p>
+        </div>
+      </div>
+
+      <!-- Followers -->
+      <div *ngIf="activeModal.type === 'followers'" class="stat-card stat-icon-card">
+        <img [src]="activeModal.iconSrc" alt="Followers Icon" class="icon-card">
+        <div>        
+          <p class="icon-text icon-text-value">{{ githubStats.followers }}</p>
+          <p class="icon-text icon-text-desc">followers</p>
+        </div>
+      </div>
+
     </div>
     <div class="window-statusbar">
       <span>github.com/Gabrieleirbag1</span>
