--- a/src/app/components/github-stats/github-stats.component.html
+++ b/src/app/components/github-stats/github-stats.component.html
@@ -31,6 +31,53 @@
       </div>
     </div>
     <div class="window-content">
+      <!-- Recycle Bin -->
+      <div *ngIf="activeModal.type === 'recycleBin'" class="recycle-bin-card">
+        <div class="toolbar">
+          <div class="toolbal-container">
+            <span class="toolbar-text">File</span>
+            <span class="toolbar-text">Edit</span>
+            <span class="toolbar-text">View</span>
+            <span class="toolbar-text">Favorites</span>
+            <span class="toolbar-text">Tools</span>
+            <span class="toolbar-text">Help</span>
+          </div>
+          <div class="toolbar-icon">
+            <img src="assets/icons/winxp-logo.png" alt="Windows XP Icon" class="toolbar-img">
+          </div>
+        </div>
+        
+        <!-- Trash items -->
+        <div class="trash-item">
+          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <span>unused_code.js</span>
+        </div>
+        
+        <div class="trash-item">
+          <img src="assets/icons/deleted-img.png" alt="Deleted Image">
+          <span>old_logo.png</span>
+        </div>
+        
+        <div class="trash-item">
+          <img src="assets/icons/rn.png" alt="Front National">
+          <span>fachos.jpg</span>
+        </div>
+        
+        <div class="trash-item">
+          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <span>bugs_fixed.txt</span>
+        </div>
+        
+        <div class="trash-item">
+          <img src="assets/icons/deleted-file.png" alt="Deleted Text File">
+          <span>todo_v1.md</span>
+        </div>
+        
+        <div class="trash-item">
+          <img src="assets/icons/deleted-img.png" alt="Deleted Image">
+          <span>screenshot.jpg</span>
+        </div>
+      </div>
       <!-- Languages Stats -->
       <div *ngIf="activeModal.type === 'languages'" class="stat-card">
         <img 
@@ -39,7 +86,6 @@
           class="github-card"
         />
       </div>
-
       <!-- Profile Stats -->
       <div *ngIf="activeModal.type === 'profile'" class="stat-card">
         <img 
@@ -48,7 +94,6 @@
           class="github-card"
         />
       </div>
-
       <!-- Contribution Stats -->
       <div *ngIf="activeModal.type === 'contributions'" class="stat-card">
         <img 
@@ -57,7 +102,6 @@
           class="github-card"
         />
       </div>
-
       <!-- Stars Stats -->
       <div *ngIf="activeModal.type === 'stars'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Stars Icon" class="icon-card">
@@ -66,7 +110,6 @@
           <p class="icon-text icon-text-desc">stars earned</p>
         </div>
       </div>
-
       <!-- Followers -->
       <div *ngIf="activeModal.type === 'followers'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Followers Icon" class="icon-card">
@@ -75,7 +118,6 @@
           <p class="icon-text icon-text-desc">followers</p>
         </div>
       </div>
-
       <!-- Total Repositories -->
       <div *ngIf="activeModal.type === 'repos'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Repositories Icon" class="icon-card">
@@ -84,7 +126,6 @@
           <p class="icon-text icon-text-desc">total repositories</p>
         </div>
       </div>
-
       <!-- Total Commits -->
       <div *ngIf="activeModal.type === 'commits'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Commits Icon" class="icon-card">
@@ -93,7 +134,6 @@
           <p class="icon-text icon-text-desc">total commits</p>
         </div>
       </div>
-
       <!-- Issues -->
       <div *ngIf="activeModal.type === 'issues'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Issues Icon" class="icon-card">
@@ -102,7 +142,6 @@
           <p class="icon-text icon-text-desc">issues opened</p>
         </div>
       </div>
-
       <!-- Pull Requests -->
       <div *ngIf="activeModal.type === 'pullRequests'" class="stat-card stat-icon-card">
         <img [src]="activeModal.iconSrc" alt="Pull Requests Icon" class="icon-card">
