feat: add expandable cards for skills presentation

--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,20 @@
-<p>skills works!</p>
+<div class="skills-cards">
+  <div class="skills-cards">
+    <div class="skill-card" (click)="expandCard($event)">
+      <div class="skill-icon devops"></div>
+      <div class="skill-desc">Description text</div>
+    </div>
+    <div class="skill-card" (click)="expandCard($event)">
+      <div class="skill-icon devops"></div>
+      <div class="skill-desc">Description text</div>
+    </div>
+    <div class="skill-card" (click)="expandCard($event)">
+      <div class="skill-icon devops"></div>
+      <div class="skill-desc">Description text</div>
+    </div>
+    <div class="skill-card" (click)="expandCard($event)">
+        <div class="skill-icon devops"></div>
+        <div class="skill-desc">Description text</div>
+    </div>
+  </div>
+</div>
