--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,30 +1,47 @@
-.skills {
-  margin-bottom: 60px;
-}
-
-.skills-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+.skills-cards {
+  display: flex;
+  transition: all 0.5s ease-in-out;
+  width: 100%;
 }
 
 .skill-card {
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.skill-card h3 {
-  color: var(--primary-color);
-  margin-bottom: 15px;
   text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  cursor: pointer;
+  transition: all 0.75s ease-in-out;
+  flex: 1;
+  overflow: hidden;
+  height: 100%;
 }
 
-.skill-card ul {
-  padding-left: 20px;
+.devops {
+  background-image: url("/assets/skills/devops.jpg");
 }
 
-.skill-card li {
-  margin-bottom: 8px;
+.skill-icon {
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  transition: all 0.75s ease-in-out;
+}
+
+.skill-card:hover .skill-icon {
+  filter: brightness(1.2);
+}
+
+.skill-card.expanded {
+  flex: 3;
+}
+
+.skill-card.reduced {
+  flex: 0.5;
+}
+
+.skill-card.expanded .skill-icon {
+  background-position: center;
+}
+
+.skill-desc {
+  font-size: 14px;
 }
