--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -15,15 +15,48 @@
       </div>
     </div>
     <div class="skill-card" (click)="expandCard($event)">
-      <div class="skill-icon devops"></div>
-      <div class="skill-desc">Description text</div>
+      <div class="skill-icon video-game"></div>
+      <div class="skill-desc">
+        <h2>GAME DEV</h2>
+        <div class="technologies-icons">
+          <img class="technologies-icon" src="assets/skills/technologies/django.jpg" alt="Django" />
+          <img class="technologies-icon" src="assets/skills/technologies/angular.webp" alt="Angular" />
+          <img class="technologies-icon" src="assets/skills/technologies/nodejs.png" alt="NodeJS" />
+          <img class="technologies-icon" src="assets/skills/technologies/flask.webp" alt="Flask" />
+        </div>
+        <span class="technologies-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="38px" viewBox="0 -960 960 960" width="38px" fill="#000000"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+        </span>
+      </div>
+    </div>
+    <div class="skill-card" (click)="expandCard($event)">
+      <div class="skill-icon software"></div>
+      <div class="skill-desc">
+        <h2>SOFTWARE</h2>
+        <div class="technologies-icons">
+          <img class="technologies-icon" src="assets/skills/technologies/django.jpg" alt="Django" />
+          <img class="technologies-icon" src="assets/skills/technologies/angular.webp" alt="Angular" />
+          <img class="technologies-icon" src="assets/skills/technologies/nodejs.png" alt="NodeJS" />
+          <img class="technologies-icon" src="assets/skills/technologies/flask.webp" alt="Flask" />
+        </div>
+        <span class="technologies-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="38px" viewBox="0 -960 960 960" width="38px" fill="#000000"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+        </span>
+      </div>
     </div>
     <div class="skill-card" (click)="expandCard($event)">
       <div class="skill-icon devops"></div>
-      <div class="skill-desc">Description text</div>
-    </div>
-    <div class="skill-card" (click)="expandCard($event)">
-        <div class="skill-icon devops"></div>
-        <div class="skill-desc">Description text</div>
+      <div class="skill-desc">
+        <h2>DEVOPS</h2>
+        <div class="technologies-icons">
+            <img class="technologies-icon" src="assets/skills/technologies/django.jpg" alt="Django" />
+            <img class="technologies-icon" src="assets/skills/technologies/angular.webp" alt="Angular" />
+            <img class="technologies-icon" src="assets/skills/technologies/nodejs.png" alt="NodeJS" />
+            <img class="technologies-icon" src="assets/skills/technologies/flask.webp" alt="Flask" />
+        </div>
+        <span class="technologies-button">
+            <svg xmlns="http://www.w3.org/2000/svg" height="38px" viewBox="0 -960 960 960" width="38px" fill="#000000"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+        </span>
+      </div>
     </div>
 </div>
