--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    margin: 0;
+  margin: 0;
+}
+
+section {
+  padding: 0 20px;
+}
+
+.about, .hobbies {
+  background-color: rgb(52, 52, 52);
+  color: white;
+}
+
+.skills {
+  padding: 0;
 }
